--- a/Life/Pregnancy.html
+++ b/Life/Pregnancy.html
@@ -167,7 +167,12 @@ thead th{
     <option value="ivf">IVF Transfer Date</option>
   </select>
 
+  <div>
+  <label for="dateInput" style="font-size:14px;color:#374151;margin-bottom:6px;display:block">
+    Select Date
+  </label>
   <input id="dateInput" type="date">
+  </div>
 
   <select id="extra" style="display:none">
     <option value="5">5-day embryo</option>
